objects/OperationHistoryUsedParts__c.object
<CustomObject>
    <fields>
        <fullName>AmountSummary__c</fullName>
        <formula>IF( ISNULL(P_N__c) || P_N__c = &apos;00000000000&apos; ,  Amount__c ,  Quantity__c  *  ProductItem__r.UnitPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>集計金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArrangementFlag__c</fullName>
        <label>手配フラグ</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNumber__c</fullName>
        <label>コールセンター受付番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompleteFlag__c</fullName>
        <label>完了フラグ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorrespondenceNumber__c</fullName>
        <label>対応番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <label>登録日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreateUserCode__c</fullName>
        <label>登録者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateUserName__c</fullName>
        <label>登録者名</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeleteDivision__c</fullName>
        <label>削除区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>費用区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputCorrespondenceNo__c</fullName>
        <label>入力対応番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>対応区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvokerQuality__c</fullName>
        <label>呼び出し元数量</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvokerUnitPrice__c</fullName>
        <label>呼び出し元単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IssueFrom__c</fullName>
        <label>出庫元</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeySerialNo__c</fullName>
        <label>キー連番</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNo__c</fullName>
        <label>ライン番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>連携キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>機種</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationHistory__c</fullName>
        <label>対応履歴</label>
        <referenceTo>OperationHistory__c</referenceTo>
        <relationshipLabel>部材一覧</relationshipLabel>
        <relationshipName>OperationHistoryUsedParts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P_N__c</fullName>
        <label>P_N</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>部材一覧</relationshipLabel>
        <relationshipName>OperationHistoryUsedParts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName_Standard__c</fullName>
        <label>品名／規格</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestContents__c</fullName>
        <label>依頼内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWAPMethods__c</fullName>
        <label>SWAP手法</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>連番</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>サービス種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakeOffRepairDivision__c</fullName>
        <label>引取修理区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種別</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>部材一覧</relationshipLabel>
        <relationshipName>OperationHistoryUsedParts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdateDateTime__c</fullName>
        <label>更新日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateUserCode__c</fullName>
        <label>更新者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateUserName__c</fullName>
        <label>更新者名</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>部材一覧</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CallCenterReceptionNumber__c</columns>
        <columns>P_N__c</columns>
        <columns>LinkKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_NO</fullName>
        <columns>NAME</columns>
        <columns>CallCenterReceptionNumber__c</columns>
        <columns>P_N__c</columns>
        <columns>LinkKey__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ProductName_Standard__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallCenterReceptionNumber__c</field>
            <operation>equals</operation>
            <value>16-0708-0189</value>
        </filters>
        <label>受付番号</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>部材一覧 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>